--- a/force-app/test/FFClientTest.cls
+++ b/force-app/test/FFClientTest.cls
@@ -24,7 +24,7 @@ private class FFClientTest {
         private FFModels.AuthInfo mockAuthInfo;
         private Long mockLastAuthTime;
         public Boolean authenticateCalled = false;
-        public Boolean simulateEvictedAuthToken;
+        public Boolean simulateEvictedAuthToken = false;
     
         public MockFFAuthService(FFModels.AuthInfo mockAuthInfo) {
             this.mockAuthInfo = mockAuthInfo;
@@ -310,6 +310,36 @@ private class FFClientTest {
 
         List<FFModelsFeatures.FeatureConfig> features = new List<FFModelsFeatures.FeatureConfig>();
         List<FFModelsFeatures.TargetSegment> targets = new List<FFModelsFeatures.TargetSegment>();
+        // Instantiate FFClient with the mock auth service
+        FFClient client = new FFClient(mockAuthService, mockApi(features, targets), mockMetricsApi(features, targets), config, 'test', 'test');
+
+        // Instantiate the CacheUpdator with the FFClient instance
+        FFClient.CacheUpdator cacheUpdator = new FFClient.CacheUpdator(client);
+
+        // Directly invoke the logic that would be triggered by the poller
+        // Call the cacheUpdator twice, because it skips on the first iteration.
+        cacheUpdator.call(null, null);
+        cacheUpdator.call(null, null);
+
+        // Verify that reauthentication was triggered due to the token missing
+        System.assertEquals(true, mockAuthService.authenticateCalled, 'Reauthentication was not triggered as expected');
+    }
+
+    @isTest
+    private static void shouldReauthenticateWhenLastAuthTimeIsMissing() {
+        // Create mock authentication information
+        FFModels.AuthInfo mockAuthInfo = new FFModels.AuthInfo('mockToken', 'envUUID', 'cluster');
+        MockFFAuthService mockAuthService = new MockFFAuthService(mockAuthInfo);
+
+        // Don't set the last auth time in order to simulate a cache eviction, just create client
+
+        // Create the FFClient configuration with a specified expiration interval
+        FFConfig config = FFConfig.builder().authExpireAfter(24 * 60 * 60) // Token expires after 24 hours
+                                    .cache(new FFMockCache()).build();
+
+        List<FFModelsFeatures.FeatureConfig> features = new List<FFModelsFeatures.FeatureConfig>();
+        List<FFModelsFeatures.TargetSegment> targets = new List<FFModelsFeatures.TargetSegment>();
+
         // Instantiate FFClient with the mock auth service
         FFClient client = new FFClient(mockAuthService, mockApi(features, targets), mockMetricsApi(features, targets), config, 'test', 'test');
 
