--- a/force-app/main/classes/FFClientBuilder.cls
+++ b/force-app/main/classes/FFClientBuilder.cls
@@ -3,6 +3,8 @@ public class FFClientBuilder {
     private final String sdkKey;
     private final FFConfig config;
     private Integer pollingIntervalInSeconds = 0;
+    private Boolean waitForinitialized = false;
+
 
     @TestVisible
     private class AlwaysFalse implements Callable {
@@ -22,18 +24,26 @@ public class FFClientBuilder {
        return this;
     }
 
+    public FFClientBuilder withWaitForInitialized(Boolean waitForInitialzed) {
+        this.waitForinitialized = waitForInitialzed;
+        return this;
+     }
+
     public FFClient build(){
         FFClient client = FFClient.create(this.sdkKey, this.config);
 
-        // Fetch initial cache values 
-        client.updateCache();
+        
+        if (this.waitForinitialized) {
+            // Fetch flags/segments before returning the client
+            client.updateCache();
+        }
 
         Boolean isPollingEnabled = pollingIntervalInSeconds > 0;
         if (!isPollingEnabled) {
             return client;
         }
 
-        new FFPoller(new FFClient.CacheUpdator(client))
+        new FFPoller(new FFClient.CacheUpdator(client, waitForinitialized))
         .staticDelay(this.pollingIntervalInSeconds)
         .untilTrue(new AlwaysFalse())
         .execute();
